k8s/elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:    
    app: signup
    component: elasticsearch
  ports:
  - name: elasticsearch
    port: 9200
    targetPort: 9200
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: signup
      component: elasticsearch
  template:
    metadata:
      labels:
        app: signup
        component: elasticsearch
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
      - image: elasticsearch:6.8.12
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: elasticsearch
      nodeSelector:
        beta.kubernetes.io/os: linux
