k8s/homepage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:    
    app: signup
    component: homepage
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
