k8s/kibana.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:    
    app: signup
    component: kibana
  ports:
  - name: kibana
    port: 5601
    targetPort: 5601
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: signup
      component: kibana
  template:
    metadata:
      labels:
        app: signup
        component: kibana
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
      - image: kibana:6.8.12
        name: kibana
        ports:
        - containerPort: 5601
          name: kibana
      nodeSelector:
        beta.kubernetes.io/os: linux
