k8s/signup-web.yml
apiVersion: v1
kind: Service
metadata:
  name: signup-web
spec:
  selector:    
    app: signup
    component: web
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signup-web
spec:
  selector:
    matchLabels:
      app: signup
      component: web
  template:
    metadata:
      labels:
        app: signup
        component: web
    spec:
      containers:
      - image: dak4dotnet/signup-web-blazor:linux
        name: signup-web
        ports:
        - containerPort: 80
          name: http
      nodeSelector:
        beta.kubernetes.io/os: linux
