k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: signup
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: homepage
          servicePort: http
      - path: /app
        backend:
          serviceName: signup-web
          servicePort: http
      - path: /api
        backend:
          serviceName: reference-data-api
          servicePort: http
